deps/v8/test/message/fail/class-fields-private-class-in-function.out
*%(basename)s:10: SyntaxError: Private field '#b' must be declared in an enclosing class
      getB() { return this.#b; }
                          ^
SyntaxError: Private field '#b' must be declared in an enclosing class
